# saturn-v

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  Justfile  README.md  index.html  pytest.ini  release.nix  robots.txt  search_index.en.js  sitemap.xml
.cargo/: config.toml
.github/: pull_request_template.md
.github/actions/vscode/: action.yml
.github/actions/wasm/: action.yml
.github/workflows/: pr.yml  release.yml  site.yml  vscode.yml  wasm.yml
blog/: index.html
blog/is-saturn-v-ai/: index.html
blog/page/1/: index.html
blog/v0-2/: index.html
blog/whats-a-decision-engine/: index.html
blog/why-free-software/: index.html
check/: Cargo.toml
check/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
crates/check/: Cargo.toml
crates/check/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: dataflow.rs  lib.rs  load.rs  solve.rs  tests.rs  types.rs  utils.rs
crates/eval/tests/: tests.rs
crates/eval/tests/fixtures/: antijoin_conditional  antijoin_unconditional  pick_one  pick_pairs
crates/frontend/: Cargo.toml
crates/frontend/src/: desugar.rs  diagnostic.rs  infer.rs  lib.rs  locate.rs  lookup.rs  lower.rs  parse.rs  resolve.rs  toplevel.rs  types.rs
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: ir_from_sexp.rs  ir_to_sexp.rs  load_valid_ir.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  sexp.rs  validate.rs
crates/leptos/: Cargo.toml
crates/leptos/src/: lib.rs
crates/lower/: Cargo.toml
crates/lower/src/: lib.rs  lower.egg
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  wasm.rs
crates/orbit/: Cargo.toml  baked.json  index.html  orbits.toml
crates/orbit/src/: canvas.rs  leptos.rs  lib.rs  simulate.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/python/tests/: test_api.py
crates/sandbox/: Cargo.toml  codemirror.js  index.html
crates/sandbox/src/: lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs
crates/server/src/api/: mod.rs  tests.rs
crates/server/src/db/: mod.rs  tests.rs
crates/solve/: Cargo.toml
crates/solve/src/: lib.rs  partial.rs  sat.rs  tests.rs  z3.rs
css/: custom.css
docs/: index.html
docs/architecture/: index.html
eval/: Cargo.toml
eval/src/: dataflow.rs  lib.rs  load.rs  solve.rs  tests.rs  types.rs  utils.rs
examples/: Basic.rp1  ChorePlanner.rp1  Laundry.rp1  NQueens.rp1
frontend/: Cargo.toml
frontend/src/: desugar.rs  diagnostic.rs  infer.rs  lib.rs  locate.rs  lookup.rs  lower.rs  parse.rs  resolve.rs  toplevel.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ir_from_sexp.rs  ir_to_sexp.rs  load_valid_ir.rs
ir/: Cargo.toml
ir/src/: lib.rs  sexp.rs  validate.rs
js/: init-orbit-demo.js
js/orbit-demo/: orbit-demo.js  orbit-demo_bg.wasm
lower/: Cargo.toml
lower/src/: lib.rs  lower.egg
lsp/: Cargo.toml
lsp/src/: lib.rs
orbit-demo/: index.html
scripts/: release_prep.js
server/: Cargo.toml
server/src/: db.rs  lib.rs  tests.rs
server/src/api/: mod.rs  tests.rs
server/src/db/: mod.rs  tests.rs
site/: .gitignore  config.toml
site/content/: _index.md  orbit-demo.md
site/content/blog/: _index.md  is-saturn-v-ai.md  v0.2.md  whats-a-decision-engine.md  why-free-software.md
site/content/docs/: _index.md  architecture.md
site/static/: .gitignore  init-orbit-demo.js
site/static/css/: custom.css
site/syntaxes/: kerolox.sublime-syntax
site/templates/shortcodes/: orbit_demo.html
src/: main.rs
tmpdb/: 0.jnl
tmpdb/keyspaces/0/: current  v2
tmpdb/keyspaces/0/tables/: 0
tree-sitter-kerolox/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-kerolox/bindings/rust/: build.rs  lib.rs
tree-sitter-kerolox/examples/: docs.rp1
tree-sitter-kerolox/queries/: highlights.scm  injections.scm
tree-sitter-kerolox/src/: grammar.json  node-types.json  parser.c
vscode-ext/: language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-ext/src/: extension.ts
vscode-ext/syntaxes/: kerolox.tmGrammar.json
