[workspace]
members = [ "check", "eval", "frontend", "fuzz", "ir", "lower", "lsp", "tree-sitter-kerolox" ]

[workspace.package]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
chumsky = "0.9"
indexmap = "2.8"
ordered-float = { version = "4", features = ["serde"] }
pretty = "0.12"
salsa = "0.20"
serde = { version = "1", features = ["derive", "rc"] }
smallvec = { version = "1.15", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = "1.42"
tree-sitter = "0.25.1"
tower-lsp = "0.20"
url = "2.5"

# internal workspace members
saturn-v-check.path = "check"
saturn-v-eval.path = "eval"
saturn-v-frontend.path = "frontend"
saturn-v-ir.path = "ir"
saturn-v-lower.path = "lower"
saturn-v-lsp.path = "lsp"
tree-sitter-kerolox.path = "tree-sitter-kerolox"

[package]
name = "saturn-v"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
saturn-v-lsp.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp.workspace = true
