[workspace]
default-members = ["crates/cli"]
resolver = "3"
members = [
    "crates/*",
    "tree-sitter-kerolox",
]

[workspace.package]
license = "AGPL-3.0-or-later"
edition = "2021"
version = "0.1.0"
authors = ["Marceline Cramer <cramermarceline@gmail.com>"]
repository = "https://github.com/marceline-cramer/saturn-v"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
ariadne = { version = "0.5", features = ["auto-color"] }
anyhow = "1"
chumsky = "0.9"
console_error_panic_hook = "0.1"
differential-dataflow = "0.18"
flume = "0.11"
futures-util = "0.3"
indexmap = "2.8"
leptos = { version = "0.8", features = ["csr"] }
ordered-float = { version = "4", features = ["serde"] }
parking_lot = "0.12"
pretty = "0.12"
ropey = "1.6"
salsa = "0.20"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
smallvec = { version = "1.15", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
timely = "0.25"
tokio = "1.42"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "^0.26.3"
toml = "0.9"
tower-lsp = "0.20"
url = "2.5"
web-sys = "0.3"

# wasm bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"
serde-wasm-bindgen = "0.6"

# internal workspace members
saturn-v-check.path = "crates/check"
saturn-v-client.path = "crates/client"
saturn-v-eval.path = "crates/eval"
saturn-v-frontend.path = "crates/frontend"
saturn-v-ir.path = "crates/ir"
saturn-v-lower.path = "crates/lower"
saturn-v-lsp.path = "crates/lsp"
saturn-v-protocol.path = "crates/protocol"
saturn-v-server.path = "crates/server"
tree-sitter-kerolox.path = "tree-sitter-kerolox"

[profile.release]
lto = "thin"
