[package]
name = "saturn-v-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
ordered-float.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
tokio.workspace = true
saturn-v-ir.workspace = true
