[package]
name = "saturn-v-eval"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
cadical = "0.1.15"
differential-dataflow = "0.14"
flume = "0.11"
futures-util = "0.3"
indexmap.workspace = true
saturn-v-ir.workspace = true
serde.workspace = true
timely = "0.20"
tokio = { workspace = true, features = ["rt", "macros"] }
