[package]
name = "saturn-v-eval"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
bitvec = { version = "1", features = ["serde"] }
differential-dataflow.workspace = true
flume = "0.11"
futures-util.workspace = true
indexmap.workspace = true
rustsat = "0.7.1"
# rustsat-cadical = { version = "0.7.1", features = ["v2-1-3"] }
rustsat-batsat = "0.7.1"
saturn-v-ir.workspace = true
serde.workspace = true
timely.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true
