[package]
name = "saturn-v-lower"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
chumsky.workspace = true
egglog = { version = "0.5", default-features = false }
indexmap.workspace = true
ordered-float.workspace = true
pretty.workspace = true
saturn-v-ir.workspace = true
thread_local = "1.1.9"
tracing.workspace = true
