[package]
name = "saturn-v-lsp"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ropey.workspace = true
salsa.workspace = true
saturn-v-frontend.workspace = true
tower-lsp.workspace = true
tokio = { workspace = true, features = ["sync"] }
tree-sitter.workspace = true
tree-sitter-kerolox.workspace = true
