[package]
name = "saturn-v"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ariadne.workspace = true
clap = { version = "4", features = ["derive"] }
salsa.workspace = true
saturn-v-client.workspace = true
saturn-v-eval.workspace = true
saturn-v-frontend.workspace = true
saturn-v-ir.workspace = true
saturn-v-lower.workspace = true
saturn-v-lsp.workspace = true
saturn-v-server.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp.workspace = true
tracing-subscriber.workspace = true
tree-sitter.workspace = true
tree-sitter-kerolox.workspace = true
url.workspace = true

[dependencies.tower-http]
version = "0.6"
features = ["trace"]
