[package]
name = "saturn-v-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
saturn-v-protocol.workspace = true
serde-wasm-bindgen.workspace = true
reqwest-eventsource = "0.6"
cfg-if = "1.0.3"
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-streams.workspace = true
url.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[features]
# Enables access to invalid network requests for testing server implementations.
invalid-requests = []
