[package]
name = "saturn-v-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
flume.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
saturn-v-protocol.workspace = true
serde-wasm-bindgen.workspace = true
slab = "0.4"
thiserror.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-streams.workspace = true

[dependencies.gloo-net]
version = "0.6"
default-features = false
features = ["websocket"]

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt"]

[features]
# Enables access to invalid network requests for testing server implementations.
invalid-requests = []
