[package]
name = "saturn-v-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitvec = { version = "1", features = ["serde"] }
differential-dataflow.workspace = true
flume.workspace = true
futures-util.workspace = true
indexmap.workspace = true
rustsat.workspace = true
rustsat-cadical.workspace = true
saturn-v-ir.workspace = true
serde.workspace = true
timely.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true
