[package]
name = "saturn-v-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
differential-dataflow.workspace = true
flume.workspace = true
futures-util.workspace = true
indexmap.workspace = true
saturn-v-ir.workspace = true
serde.workspace = true
tinyvec = { workspace = true, features = ["serde"] }
timely.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true

# batsat = "0.6.0"
# rustsat-batsat = "0.7.4"

[dependencies.rustsat]
git = "https://github.com/marceline-cramer/rustsat"
branch = "saturn-v"

[dependencies.rustsat-cadical]
git = "https://github.com/marceline-cramer/rustsat"
branch = "saturn-v"
