[package]
name = "saturn-v-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
differential-dataflow.workspace = true
flume.workspace = true
futures-util.workspace = true
indexmap.workspace = true
rustsat.workspace = true
rustsat-cadical.workspace = true
saturn-v-ir.workspace = true
serde.workspace = true
tinyvec = { workspace = true, features = ["serde"] }
timely.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
chumsky.workspace = true
datatest-stable.workspace = true

[[test]]
name = "tests"
harness = false
