[package]
name = "saturn-v-frontend"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ariadne.workspace = true
lsp-types = "0.94"
indexmap.workspace = true
ropey.workspace = true
salsa.workspace = true
saturn-v-ir.workspace = true
saturn-v-lower.workspace = true
smallvec.workspace = true
strum.workspace = true
url.workspace = true
