[package]
name = "saturn-v-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ariadne.workspace = true
lsp-types = "0.94"
indexmap.workspace = true
ropey.workspace = true
salsa.workspace = true
saturn-v-ir.workspace = true
saturn-v-lower.workspace = true
smallvec.workspace = true
strum.workspace = true
url.workspace = true
