[package]
name = "saturn-v-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
chumsky.workspace = true
either.workspace = true
ordered-float.workspace = true
pretty.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[features]
fuzz = ["dep:arbitrary", "ordered-float/arbitrary"]
