[package]
name = "saturn-v-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chumsky.workspace = true
egglog = { version = "1.0", default-features = false }
indexmap.workspace = true
ordered-float.workspace = true
pretty.workspace = true
saturn-v-ir.workspace = true
thread_local = "1.1.9"
tracing.workspace = true
