[package]
name = "saturn-v-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ropey.workspace = true
salsa.workspace = true
saturn-v-frontend.workspace = true
tower-lsp.workspace = true
tokio = { workspace = true, features = ["sync"] }
tree-sitter.workspace = true
tree-sitter-kerolox.workspace = true
