[package]
name = "saturn-v-orbit"
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true

[dependencies.leptos]
workspace = true
optional = true

[dependencies.console_error_panic_hook]
workspace = true
optional = true

[dependencies.rayon]
version = "1.11"
optional = true

[dependencies.rustfft]
version = "6.4"
optional = true

[dependencies.toml]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[dependencies.web-sys]
workspace = true
features = ["CanvasRenderingContext2d", "Performance", "Window"]

[features]
leptos = ["dep:leptos", "dep:console_error_panic_hook"]
simulate = ["dep:rayon", "dep:rustfft", "dep:toml", "dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "bake"
required-features = ["simulate"]

[[bin]]
name = "orbit-demo"
required-features = ["leptos"]
