[package]
name = "saturn-v-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
differential-dataflow.workspace = true
flume.workspace = true
futures-util.workspace = true
ordered-float.workspace = true
saturn-v-eval.workspace = true
saturn-v-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.22"
timely.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
tracing.workspace = true

[dependencies.fjall]
version = "3"

[dev-dependencies]
saturn-v-client = { workspace = true, features = ["invalid-requests"] }
tracing-subscriber.workspace = true
